@@ -52,14 +52,9 @@ JHtml::_('behavior.formvalidation');
 					<?php echo $this->form->getInput('access'); ?>
 
 		<div class="clr"></div>
-		<?php echo $this->form->getLabel('introtext'); ?>
+		<?php echo $this->form->getLabel('articletext'); ?><br />
 		<div class="clr"></div>
-		<?php echo $this->form->getInput('introtext'); ?>
-
-		<div class="clr"></div>
-		<?php echo $this->form->getLabel('fulltext'); ?><br />
-		<div class="clr"></div>
-		<?php echo $this->form->getInput('fulltext'); ?>
+		<?php echo $this->form->getInput('articletext'); ?>
 		</fieldset>
 	</div>
 
